--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: germinate
 Section: utils
 Priority: optional
 Maintainer: Colin Watson <cjwatson@ubuntu.com>
+Uploaders: Luis Antonio Garcia Gisbert <luisgg@gmail.com>
 Standards-Version: 3.9.2
 Build-Depends: debhelper (>= 7.0.50~)
 Build-Depends-Indep: python (>= 2.6.6-3~), python-all, python3 (>= 3.1.2-8~), python3-all, python-setuptools, python3-setuptools, python-apt (>= 0.7.93.2~), python3-apt (>= 0.7.93.2~), python-unittest2
